bkash/bkash-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bkash-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bkash
  template:
    metadata:
      labels:
        app: bkash
    spec:
      containers:
        - name: bkash
          image: nazmul4532brainstation/bkash-service:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: bkash-service
spec:
  selector:
    app: bkash
  ports:
    - port: 80
      targetPort: 3000
