bkash/bkash-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bkash-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: bkash.server.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bkash-service
                port:
                  number: 80
